crates/forge_tool/src/permission/snapshots/forge_tool__permission__result__tests__llm_format_denied.snap
---
source: crates/forge_tool/src/permission/result.rs
expression: display
---
<permission_result>
  <state>denied</state>
  <permission>Write</permission>
  <path>/test/path</path>
  <context>In deny list</context>
</permission_result>
