crates/forge_tool/src/permission/snapshots/forge_tool__permission__result__tests__llm_format_minimal.snap
---
source: crates/forge_tool/src/permission/result.rs
assertion_line: 269
expression: display
---
<permission_result>
  <state>denied</state>
  <tool>test_tool</tool>
  <operation>read</operation>
  <path>/test/path</path>
</permission_result>