crates/forge_tool/src/permission/snapshots/forge_tool__permission__result__tests__simple_result_display.snap
---
source: crates/forge_tool/src/permission/result.rs
assertion_line: 183
expression: result.to_string()
---
Permission granted (one-time) for test_tool to read /test/path